--- a/static/css/soft-ui-dashboard.css
+++ b/static/css/soft-ui-dashboard.css
@@ -249,7 +249,7 @@ sup {
 }
 
 a {
-  color: #cb0c9f;
+  color: #aa952d;
   text-decoration: none;
 }
 
@@ -2632,9 +2632,7 @@ progress {
 }
 
 @media (max-width: 575.98px) {
-    .text-xxs{
-        font-size: 0.2rem !important;
-    }
+
   .table-responsive-sm {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
@@ -2642,9 +2640,7 @@ progress {
 }
 
 @media (max-width: 767.98px) {
-     .text-xxs{
-        font-size: 0.2rem !important;
-    }
+
   .table-responsive-md {
     overflow-x: auto;
     -webkit-overflow-scrolling: touch;
@@ -3026,8 +3022,8 @@ textarea.form-control-lg {
 }
 
 .form-check-input[type="checkbox"]:indeterminate {
-  background-color: #cb0c9f;
-  border-color: #cb0c9f;
+  background-color: #aa952d;
+  border-color: #aa952d;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 
@@ -3116,7 +3112,7 @@ textarea.form-control-lg {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #cb0c9f;
+  background-color: #aa952d;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3146,7 +3142,7 @@ textarea.form-control-lg {
 .form-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #cb0c9f;
+  background-color: #aa952d;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3597,8 +3593,8 @@ fieldset:disabled .btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #cb0c9f;
-  border-color: #cb0c9f;
+  background-color: #aa952d;
+  border-color: #aa952d;
 }
 
 .btn-primary:hover {
@@ -3636,8 +3632,8 @@ fieldset:disabled .btn {
 .btn-primary:disabled,
 .btn-primary.disabled {
   color: #fff;
-  background-color: #cb0c9f;
-  border-color: #cb0c9f;
+  background-color: #aa952d;
+  border-color: #aa952d;
 }
 
 .btn-secondary {
@@ -4001,19 +3997,19 @@ fieldset:disabled .btn {
 }
 
 .btn-outline-primary {
-  color: #cb0c9f;
-  border-color: #cb0c9f;
+  color: #aa952d;
+  border-color: #aa952d;
 }
 
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #cb0c9f;
-  border-color: #cb0c9f;
+  background-color: #aa952d ;
+  border-color: #aa952d ;
 }
 
 .btn-check:focus+.btn-outline-primary,
 .btn-outline-primary:focus {
-  box-shadow: 0 0 0 0.2rem rgba(203, 12, 159, 0.5);
+  box-shadow: 0 0 0 0.2rem  #aa952d ;
 }
 
 .btn-check:checked+.btn-outline-primary,
@@ -4022,8 +4018,8 @@ fieldset:disabled .btn {
 .btn-outline-primary.active,
 .btn-outline-primary.dropdown-toggle.show {
   color: #fff;
-  background-color: #cb0c9f;
-  border-color: #cb0c9f;
+  background-color: #aa952d;
+  border-color: #aa952d;
 }
 
 .btn-check:checked+.btn-outline-primary:focus,
@@ -4036,7 +4032,7 @@ fieldset:disabled .btn {
 
 .btn-outline-primary:disabled,
 .btn-outline-primary.disabled {
-  color: #cb0c9f;
+  color: #aa952d;
   background-color: transparent;
 }
 
@@ -4362,7 +4358,7 @@ fieldset:disabled .btn {
 
 .btn-link {
   font-weight: 400;
-  color: #cb0c9f;
+  color: #aa952d;
   text-decoration: none;
 }
 
@@ -4897,7 +4893,7 @@ fieldset:disabled .btn {
 .nav-link {
   display: block;
   padding: 0.5rem 1rem;
-  color: #cb0c9f;
+  color: #aa952d;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
 
@@ -5394,6 +5390,10 @@ fieldset:disabled .btn {
   border: 0 solid rgba(0, 0, 0, 0.125);
   border-radius: 1rem;
 }
+.box-shadow {
+      box-shadow: 5px 10px rgba(0, 0, 0, 0.125) !important;
+
+}
 
 .card>hr {
   margin-right: 0;
@@ -5722,7 +5722,7 @@ fieldset:disabled .btn {
 .page-link {
   position: relative;
   display: block;
-  color: #cb0c9f;
+  color: #aa952d;
   background-color: #fff;
   border: 1px solid #dee2e6;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -5756,8 +5756,8 @@ fieldset:disabled .btn {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #cb0c9f;
-  border-color: #cb0c9f;
+  background-color: #aa952d;
+  border-color: #aa952d;
 }
 
 .page-item.disabled .page-link {
@@ -5974,7 +5974,7 @@ fieldset:disabled .btn {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #cb0c9f;
+  background-color: #aa952d;
   transition: width 0.6s ease;
 }
 
@@ -6065,8 +6065,8 @@ fieldset:disabled .btn {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #cb0c9f;
-  border-color: #cb0c9f;
+  background-color: #aa952d;
+  border-color: #aa952d;
 }
 
 .list-group-item+.list-group-item {
@@ -7487,7 +7487,7 @@ fieldset:disabled .btn {
 }
 
 .link-primary {
-  color: #cb0c9f;
+  color: #aa952d;
 }
 
 .link-primary:hover,
@@ -8086,7 +8086,7 @@ fieldset:disabled .btn {
 }
 
 .border-primary {
-  border-color: #cb0c9f !important;
+  border-color: #aa952d !important;
 }
 
 .border-secondary {
@@ -9843,7 +9843,7 @@ fieldset:disabled .btn {
 
 /* rtl:end:remove */
 .text-primary {
-  color: #cb0c9f !important;
+  color: #aa952d !important;
 }
 
 .text-secondary {
@@ -9899,7 +9899,7 @@ fieldset:disabled .btn {
 }
 
 .bg-primary {
-  background-color: #cb0c9f !important;
+  background-color: #aa952d !important;
 }
 
 .bg-secondary {
@@ -18818,7 +18818,7 @@ fieldset:disabled .btn {
 }
 
 .badge.bg-primary {
-  background: #cb0c9f;
+  background: #aa952d;
 }
 
 .badge.bg-secondary {
@@ -19869,7 +19869,7 @@ fieldset:disabled .btn {
 }
 .logo_login {
     height:auto;
-    width:3rem;
+    width:3.7rem;
 }
 .logo_user {
     height:auto;
@@ -20723,15 +20723,15 @@ hr.horizontal.gray-light {
 
 .navbar {
   box-shadow: 0 2px 12px 0 rgba(0, 0, 0, 0.16);
+
 }
 
 .navbar .navbar-brand {
-  color: #344767;
   font-size: 0.875rem;
 }
 
 .navbar .nav-link {
-  color: #344767;
+  color: #f4f4f4;
   padding: 0.5rem 1rem;
   font-weight: 400;
   font-size: 0.875rem;
@@ -20750,11 +20750,11 @@ hr.horizontal.gray-light {
 
 .navbar.navbar-transparent .nav-link:hover,
 .navbar.navbar-transparent .nav-link:focus {
-  color: rgba(255, 255, 255, 0.75);
+  color: #aa952d ;
 }
 
 .navbar.navbar-transparent .navbar-toggler .navbar-toggler-icon .navbar-toggler-bar {
-  background: #fff;
+  background:  #aa952d;
 }
 
 .navbar.navbar-transparent .navbar-collapse {
@@ -20763,7 +20763,7 @@ hr.horizontal.gray-light {
 
 .navbar.navbar-dark .navbar-collapse.show .dropdown-header.text-dark,
 .navbar.navbar-dark .navbar-collapse.collapsing .dropdown-header.text-dark {
-  color: #fff !important;
+  color:  #aa952d !important;
 }
 
 .navbar .sidenav-toggler-inner {
@@ -21518,7 +21518,7 @@ hr.horizontal.gray-light {
   .navbar-vertical.navbar-expand-xxl .lavalamp-object {
     width: calc(100% - 1rem) !important;
     background: theme-color("primary");
-    color: color-yiq(#cb0c9f);
+    color: color-yiq(#aa952d);
     margin-right: 0.5rem;
     margin-left: 0.5rem;
     padding-left: 1rem;
@@ -21538,7 +21538,7 @@ hr.horizontal.gray-light {
 }
 
 .sidenav[data-color="primary"] .navbar-nav>.nav-item>.nav-link.active .icon {
-  background-image: linear-gradient(310deg, #cb0c9f 0%, #cb0c9f 100%);
+  background-image: linear-gradient(310deg, #aa952d 0%, #aa952d 100%);
 }
 
 .sidenav[data-color="secondary"] .navbar-nav>.nav-item>.nav-link.active .icon {
@@ -21683,7 +21683,7 @@ hr.horizontal.gray-light {
 }
 
 .navbar-vertical .navbar-nav>.nav-item .nav-link.active .icon {
-  background-image: linear-gradient(310deg, #cb0c9f 0%, #cb0c9f 100%);
+  background-image: linear-gradient(310deg, #aa952d 0%, #aa952d 100%);
 }
 
 .navbar-vertical .navbar-nav>.nav-item .nav-link.active .icon svg .color-background,
@@ -22918,16 +22918,25 @@ hr.horizontal.gray-light {
     border: 1px solid #aa952d !important;
  }
 /* Add some margins for each label */
+  .table-max{
+        width:auto;
 
+    }
 
 /* Style the input fields */
 
 /* Add responsiveness - display the form controls vertically instead of horizontally on screens that are less than 800px wide */
 @media (max-width: 800px) {
+    .table-max{
+        width: 4rem !important;
+
+    }
   .form-inline input {
     margin: 10px 0;
   }
-
+.text-xxs {
+    font-size: 0.35rem !important;
+}
   .form-inline {
     flex-direction: column;
     align-items: stretch;
@@ -23056,14 +23065,12 @@ hr.horizontal.gray-light {
   left: 1rem;
 }
 @media all and (max-width: 699px) and (min-width: 520px), (min-width: 1151px) {
-   .text-xxs {
-    font-size: 0.2rem  !important ;
-  }
-}
-.timeline-one-side .timeline-content {
-  width: auto;
-}
 
+
+    .timeline-one-side .timeline-content {
+        width: auto;
+    }
+}
 @media (min-width: 992px) {
   .timeline-one-side .timeline-content {
     max-width: 30rem;
@@ -23281,7 +23288,7 @@ p,
 }
 
 .text-xxs {
-  font-size: 0.65rem !important ;
+  font-size: 0.65rem ;
 }
 table, th, td {
   border: 1px solid #aa952d !important;
@@ -24374,7 +24381,7 @@ span.flatpickr-weekday {
 .flatpickr-calendar .flatpickr-day.selected,
 .flatpickr-calendar .flatpickr-day.startRange,
 .flatpickr-calendar .flatpickr-day.endRange {
-  background: #cb0c9f !important;
+  background: #aa952d !important;
   color: #fff;
   border: none;
 }
@@ -24406,7 +24413,7 @@ span.flatpickr-weekday {
 .flatpickr-day.endRange.startRange+.endRange:not(:nth-child(7n+1)),
 .flatpickr-day.selected.startRange+.endRange:not(:nth-child(7n+1)),
 .flatpickr-day.startRange.startRange+.endRange:not(:nth-child(7n+1)) {
-  box-shadow: -10px 0 0 #cb0c9f;
+  box-shadow: -10px 0 0 #aa952d;
 }
 
 /*! nouislider - 14.6.3 - 11/19/2020 */
