--- a/templates/userHeader.html
+++ b/templates/userHeader.html
@@ -27,19 +27,19 @@
                                                                    {% if request.user.first_name %}
                                                                         <li class="nav-item">
                                     <a class="nav-link me-2" href="{% url 'logout' %}">
-                                        <i class="fas fa-power-off opacity-6 text-dark me-1" aria-hidden="true"></i>
+                                        <i class="fas fa-power-off opacity-6 text-white me-1" aria-hidden="true"></i>
                                         تسجيل خروج
                                     </a>
                                 </li>
                                                                         <li class="nav-item">
                                     <a class="nav-link me-2" href="{% url 'profile' %}">
-                                        <i class="fa fa-user opacity-6 text-dark me-1" aria-hidden="true"></i>
+                                        <i class="fa fa-user opacity-6 text-white me-1" aria-hidden="true"></i>
                                         الملف الشخصى
                                     </a>
                                 </li>
                                                                         <li class="nav-item">
                                     <a class="nav-link d-flex align-items-center me-2 active" aria-current="page" href="{% url 'home-page' %}">
-                                        <i class="fa fa-chart-pie opacity-6 text-dark me-1" aria-hidden="true"></i>
+                                        <i class="fa fa-chart-pie opacity-6 text-white me-1" aria-hidden="true"></i>
                                         لوحة التحكم
                                     </a>
                                 </li>
@@ -48,14 +48,14 @@
                                         {% else %}
                                                                                        <li class="nav-item">
                                     <a class="nav-link me-2" href="{% url 'user-page' %}">
-                                        <i class="fas fa-home opacity-6 text-dark me-1" aria-hidden="true"></i>
+                                        <i class="fas fa-home opacity-6 text-white me-1" aria-hidden="true"></i>
                                        الصفحة الرئيسية
                                     </a>
 
                                 </li>
                                                                                     <li class="nav-item">
                                     <a class="nav-link me-2" href="{% url 'login' %}">
-                                        <i class="fas fa-key opacity-6 text-dark me-1" aria-hidden="true"></i>
+                                        <i class="fas fa-key opacity-6 text-white me-1" aria-hidden="true"></i>
                                         تسجيل دخول
                                     </a>
 
