--- a/userInterface/templates/userInterface/analyst-list.html
+++ b/userInterface/templates/userInterface/analyst-list.html
@@ -1,15 +1,22 @@
-{% extends 'userlayout.html' %}
+{% extends 'masterpage.html' %}
 {% load static %}
-{% block title %} صحيفة مال  {% endblock title %}
+{% block title %}  صحفية مال {% endblock title %}
+
 
 {% block body %}
-       <div class="m position-relative" style="background-image: url('../../../static/images/maal.png') ; background-size: cover;">
-    <main class="main-content border-radius-sm">
-      <div class="section min-vh-100 position-relative transform-scale-0 transform-scale-md-0 m-auto m-0">
-        <div class="container">
-         <div class="row pt-8">
-             <div class="col-lg-12 col-md-12 mb-md-0 mb-4">
-          <div class="card">
+<section class="min-vh-85 mb-8">
+    <div class=" page-header align-items-start min-vh-50 pt-5 pb-11 m-3 border-radius-lg" style=" background-image: url('../../../static/images/logo_bac_A5rHW2G.jpeg');">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-5 text-center mx-auto pt-lg-5">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row mt-lg-n10 mt-md-n11 mt-n10 justify-content-center">
+          <div class="col-12 mx-auto">
+              <div class="card z-index-0">
             <div class="card-header pb-0">
               <div class="row">
                 <div class="col-lg-6 col-7">
@@ -81,10 +88,12 @@
               </div>
             </div>
           </div>
-        </div>
-         </div>
-        </div>
+          </div>
       </div>
-    </main>
-       </div>
+    </div>
+</section>
 {% endblock body %}
+
+
+
+
