--- a/userInterface/templates/userInterface/analyst-profile.html
+++ b/userInterface/templates/userInterface/analyst-profile.html
@@ -1,16 +1,21 @@
-{% extends 'userlayout.html' %}
+{% extends 'masterpage.html' %}
 {% load static %}
 {% block title %}  صحفية مال {% endblock title %}
 
 
 {% block body %}
-
-         <div class="m position-relative" style="background-image: url('../../../static/images/maal.png') ; background-size: cover;">
-    <main class="main-content border-radius-sm">
-      <div class="section min-vh-100 position-relative transform-scale-0 transform-scale-md-0 m-auto m-0">
-        <div class="container">
-        <div class="row pt-11 pt-lg-11">
-            <div class="col-lg-12">
+<section class="min-vh-85 mb-8">
+    <div class=" page-header align-items-start min-vh-50 pt-5 pb-11 m-3 border-radius-lg" style=" background-image: url('../../../static/images/back.jpg');">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-5 text-center mx-auto pt-lg-5">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row mt-lg-n10 mt-md-n11 mt-n10 justify-content-center">
+                     <div class="col-lg-12">
                 <div class="card card-body blur shadow-blur mx-4 mt-n6 overflow-hidden">
         <div class="row gx-4">
           <div class="col-auto">
@@ -33,12 +38,9 @@
       </div>
 
             </div>
-        </div>
 
-
-
-
-            <div class="row pt-3 pt-lg-3 pb-3">
+      </div>
+                    <div class="row pt-3 pt-lg-3 pb-3">
      <div class="col-12 col-xl-4  pt-6">
                       <div class="card h-100">
             <div class="card-header pb-0 p-3">
@@ -108,10 +110,13 @@
           </div>
         </div>
     </div>
-
-        </div>
-      </div>
-    </main>
-
-
+    </div>
+</section>
 {% endblock body %}
+
+
+
+
+
+
+
