--- a/userInterface/templates/userInterface/perlist.html
+++ b/userInterface/templates/userInterface/perlist.html
@@ -3,8 +3,9 @@
 {% block title %} صحيفة مال  {% endblock title %}
 
 {% block body %}
-       <div class="m position-relative" style="background-image: url('../../../static/images/maal.png') ; background-size: cover;">
-    <main class="main-content border-radius-sm">
+ <div class="m position-relative"
+         style="background-color: #f4f4f4">
+     <main class="main-content border-radius-sm">
       <div class="section min-vh-100 position-relative transform-scale-0 transform-scale-md-0 m-auto m-0">
         <div class="container">
          <div class="row pt-8">
