--- a/userInterface/templates/userInterface/rate-profile.html
+++ b/userInterface/templates/userInterface/rate-profile.html
@@ -1,116 +1,134 @@
-{% extends 'userlayout.html' %}
+{% extends 'masterpage.html' %}
 {% load static %}
 {% block title %}  صحفية مال {% endblock title %}
 
 
 {% block body %}
-         <div class="m position-relative" style="background-image: url('../../../static/images/maal.png') ; background-size: cover;">
-    <main class="main-content border-radius-sm">
-      <div class="section min-vh-100 position-relative transform-scale-0 transform-scale-md-0 m-auto m-0">
-        <div class="container pt-7">
-    <div class="row my-4">
-        <div class="col-lg-12 col-md-12">
-          <div class="card h-100">
-            <div class="card-header pb-0">
-              <h6>التقييم البحثى</h6>
-              <p class="text-sm">
-                <i class="fa fa-calender text-success" aria-hidden="true"></i>
-                <span class="font-weight-bold">{{ rate.RecommendDate }}</span>
-              </p>
-            </div>
-            <div class="card-body p-3">
-              <div class="timeline timeline-one-side">
-                <div class="timeline-block mb-3">
-                  <span class="timeline-step">
-                    <i class="ni ni-user-run text-success "></i>
-                  </span>
-                  <div class="timeline-content">
-                    <a  href="{% url 'user-interface' rate.AnalayticName.pk %}">
-                        <h6 class="text-dark text-sm font-weight-bold mb-0"> اسم المحلل</h6>
-                    <p class="text-secondary font-weight-bold text-xs mt-1 mb-0">{{ rate.AnalayticName.name }}</p>
-                    </a>
-                  </div>
-                </div>
-                <div class="timeline-block mb-3">
-                  <span class="timeline-step">
-                    <i class="ni ni-building text-danger "></i>
-                  </span>
-                  <div class="timeline-content">
-                   <a href="">
-                        <h6 class="text-dark text-sm font-weight-bold mb-0"> الشركة المدرجة</h6>
-                    <p class="text-secondary font-weight-bold text-xs mt-1 mb-0"> {{ rate.CompanyEntered.name }}</p>
-                            <h6 class="text-dark text-sm font-weight-bold mb-0"> القطاع</h6>
-                    <p class="text-secondary font-weight-bold text-xs mt-1 mb-0"> {{ rate.CompanyEntered.category.name }}</p>
-                   </a>
-                  </div>
-                </div>
-                <div class="timeline-block mb-3">
-                  <span class="timeline-step">
-                    <i class="ni ni-cart text-info "></i>
-                  </span>
-                  <div class="timeline-content">
-                    <h6 class="text-dark text-sm font-weight-bold mb-0"> شركة البحث</h6>
-                    <p class="text-secondary font-weight-bold text-xs mt-1 mb-0"> {{ rate.ResearchCompany.name }}</p>
-                  </div>
-                </div>
-                <div class="timeline-block mb-3">
-                  <span class="timeline-step">
-                    <i class="ni ni-money-coins text-warning "></i>
-                  </span>
-                  <div class="timeline-content">
-                    <h6 class="text-dark text-sm font-weight-bold mb-0"> القيمة العادلة</h6>
-                    <p class="text-secondary font-weight-bold text-xs mt-1 mb-0">{{ rate.FairValue }}</p>
-                  </div>
-                </div>
-                                  <div class="timeline-block">
-                  <span class="timeline-step">
-                    <i class="ni ni-chat-round text-dark "></i>
-                  </span>
-                  <div class="timeline-content">
-                    <h6 class="text-dark text-sm font-weight-bold mb-0"> % الفارق</h6>
-                    <p class="text-secondary font-weight-bold text-xs mt-1 mb-0">{{ rate.fair_percentage |floatformat:-2  }} </p>
-                  </div>
-                </div>
-
-                <div class="timeline-block mb-3">
-                  <span class="timeline-step">
-                    <i class="ni ni-money-coins text-primary "></i>
-                  </span>
-                  <div class="timeline-content">
-                    <h6 class="text-dark text-sm font-weight-bold mb-0"> السعر السوقى</h6>
-                    <p class="text-secondary font-weight-bold text-xs mt-1 mb-0">{{ rate.MarketValue }}</p>
-                  </div>
-                </div>
-                                                    <div class="timeline-block">
-                  <span class="timeline-step">
-                    <i class="ni ni-chat-round text-dark "></i>
-                  </span>
-                  <div class="timeline-content">
-                    <h6 class="text-dark text-sm font-weight-bold mb-0">  % الفارق</h6>
-                    <p class="text-secondary font-weight-bold text-xs mt-1 mb-0">{{ rate.market_percentage |floatformat:-2  }}</p>
-                  </div>
-                </div>
-
-                <div class="timeline-block mb-3">
-                  <span class="timeline-step">
-                    <i class="ni ni-paper-diploma text-dark "></i>
-                  </span>
-                  <div class="timeline-content">
-                    <h6 class="text-dark text-sm font-weight-bold mb-0"> التوصية</h6>
-                    <p class="text-secondary font-weight-bold text-xs mt-1 mb-0">{{ rate.Recommendation }}</p>
-                  </div>
+<section class="min-vh-85 mb-8">
+    <div class=" page-header align-items-start min-vh-50 pt-5 pb-11 m-3 border-radius-lg" style=" background-image: url('../../../static/images/back_6KpGULO.jpg');">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-5 text-center mx-auto pt-lg-5">
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row mt-lg-n10 mt-md-n11 mt-n10 justify-content-center">
+          <div class="col-lg-8">
+          <div class="card h-100 box-shadow">
+            <div class="card-header pb-0 p-3">
+              <div class="row d-flex justify-content-between">
+                <div class="col-6 text-end">
+                  <a href="{% url 'all-user-rate' %}" class="btn btn-outline-primary mal-color btn-sm mb-0">جميع التقييمات</a>
                 </div>
               </div>
             </div>
+            <div class="card-body p-3 pb-0">
+              <ul class="list-group">
+                <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
+                  <div class="d-flex flex-column">
+                    <h6 class="mb-1 text-dark font-weight-bold text-sm">تاريخ التوصية</h6>
+                  </div>
+                  <div class="d-flex align-items-center text-sm">
+                                          <span class="text-xs"> {{ rate.RecommendDate }}</span>
+
+                  </div>
+                </li>
+                  <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
+                  <div class="d-flex flex-column">
+                    <h6 class="mb-1 text-dark font-weight-bold text-sm">الشركة</h6>
+                  </div>
+                  <div class="d-flex align-items-center text-sm">
+                                          <span class="text-xs"> {{ rate.CompanyEntered.name }}</span>
+
+                  </div>
+                </li>
+                  <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
+                  <div class="d-flex flex-column">
+                    <h6 class="mb-1 text-dark font-weight-bold text-sm">القطاع</h6>
+                  </div>
+                  <div class="d-flex align-items-center text-sm">
+                                          <span class="text-xs"> {{ rate.CompanyEntered.category.name }}</span>
+
+                  </div>
+                </li>
+                  <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
+                  <div class="d-flex flex-column">
+                    <h6 class="mb-1 text-dark font-weight-bold text-sm">شركة الأبحاث</h6>
+                  </div>
+                  <div class="d-flex align-items-center text-sm">
+                                          <span class="text-xs"> {{ rate.ResearchCompany }}</span>
+
+                  </div>
+                </li>
+                <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
+                  <div class="d-flex flex-column">
+                    <h6 class="text-dark mb-1 font-weight-bold text-sm">المحلل</h6>
+                   <a href="{% url 'user-interface' rate.AnalayticName.pk %}"> <span class="badge badge-sm bg-maal text-xs">تفاصيل</span></a>
+                  </div>
+                  <div class="d-flex align-items-center text-sm">
+                     {{ rate.AnalayticName.name }}
+                  </div>
+                </li>
+                <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
+                  <div class="d-flex flex-column">
+                    <h6 class="text-dark mb-1 font-weight-bold text-sm">القيمة العادلة</h6>
+                  </div>
+                  <div class="d-flex align-items-center text-sm">
+                    {{ rate.FairValue }}
+                  </div>
+                </li>
+                <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
+                  <div class="d-flex flex-column">
+                    <h6 class="text-dark mb-1 font-weight-bold text-sm">التغير</h6>
+                  </div>
+                  <div class="d-flex align-items-center text-sm">
+                    {% if rate.changeFair %}
+                                                           <i class="fas fa-arrow-down text-danger" aria-hidden="true"></i>
+                                                           <p class="text-xxs text-danger  mb-0">{{ rate.fair_percentage |floatformat:-2 }}</p>
+                                                        {% else %}
+                                                           <i class="fas fa-arrow-up text-success" aria-hidden="true"></i>
+                                                           <p class="text-xxs text-success  mb-0">{{ rate.fair_percentage |floatformat:-2 }}</p>
+                                                        {% endif %}
+                  </div>
+                </li>
+                <li class="list-group-item border-0 d-flex justify-content-between ps-0 border-radius-lg">
+                  <div class="d-flex flex-column">
+                    <h6 class="text-dark mb-1 font-weight-bold text-sm">السعر السوقى</h6>
+                  </div>
+                  <div class="d-flex align-items-center text-sm">
+                    {{ rate.MarketValue }}
+                  </div>
+                </li>
+                              <li class="list-group-item border-0 d-flex justify-content-between ps-0 mb-2 border-radius-lg">
+                  <div class="d-flex flex-column">
+                    <h6 class="text-dark mb-1 font-weight-bold text-sm">التغير</h6>
+                  </div>
+                  <div class="d-flex align-items-center text-sm">
+                      {% if rate.changeMarket %}
+                                                                                                                      <i class="fas fa-arrow-down text-danger" aria-hidden="true"></i>
+                                                           <p class="text-xxs text-danger  mb-0">{{ rate.market_percentage |floatformat:-2 }}</p>
+                                                        {% else %}
+                                                                                                                      <i class="fas fa-arrow-up text-success" aria-hidden="true"></i>
+                                                           <p class="text-xxs text-success  mb-0">{{ rate.market_percentage |floatformat:-2 }}</p>
+                                                        {% endif %}
+                  </div>
+                </li>
+   <li class="list-group-item border-0 d-flex justify-content-between ps-0 border-radius-lg">
+                  <div class="d-flex flex-column">
+                    <h6 class="text-dark mb-1 font-weight-bold text-sm">السعر المستهدف</h6>
+                  </div>
+                  <div class="d-flex align-items-center text-sm">
+                    {{ rate.CurrenncyValue }}
+                  </div>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
-    </div>
-
-
-        </div>
       </div>
-    </main>
-         </div>
-
-
+    </div>
+</section>
 {% endblock body %}
+
